<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileOrientation">

    <ProgressBar
        android:id="@+id/progressBar_p5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:progress="56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_p5"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:onClick="startProfile6"
        android:text="@string/continue_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />


    <TextView
        android:id="@+id/text_p5"
        android:layout_width="230dp"
        android:layout_height="117dp"
        android:text="@string/my_sexual_orientation_is"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />


    <TextView
        android:id="@+id/guideline_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_up_to_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/warning_p5_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_at_least_one"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/warning_p5_2"
        app:layout_constraintTop_toBottomOf="@+id/text_p5" />

    <TextView
        android:id="@+id/warning_p5_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_t_select_more_than_3"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_p5" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_p5"
        android:layout_width="324dp"
        android:layout_height="235dp"
        app:chipSpacing="30dp"
        app:chipSpacingHorizontal="30dp"
        app:chipSpacingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/straight"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/lesbian"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/gay"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/bisexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/asexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/demisexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/pansexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/queer"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/questioning"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>