...

    <TextView
        android:id="@+id/warning_p7_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/warning_p7_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.chip.Chip
            android:id="@+id/chip42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
