...
        android:textColor="@color/blindly_purple_secondary"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/passions_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_text"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin">
...
